# assessment_winter_2026

assignment_0/include/rm_a0/: a0_04_vowel_count.hpp
assignment_0/src/: a0_01_temperature.cpp  a0_02_leap_year.cpp  a0_03_range_sum.cpp  a0_04_vowel_count.cpp  a0_05_score_stats.cpp  a0_06_bigint.cpp  a0_07_log_analyzer.cpp  a0_08_raii_handle.cpp  a0_lib.cpp
assignment_2/detector/: CMakeLists.txt
assignment_2/detector/include/: detector.hpp
assignment_2/detector/src/: detector.cpp
assignment_2/repairer/: CMakeLists.txt
assignment_2/repairer/src/: main.cpp
assignment_3/minst数据集训练/: model.pth  model.py  train.py
